Fixed discount__button not showing in ie11
Forgot to update this yesterday.

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -34,6 +34,10 @@
 
         &:hover {
             background: $discount-gradient-hover;
+            cursor: pointer;
+        }
+        @media all and (-ms-high-contrast:none) {
+            z-index: 1;
         }
     }
 
